# maxcli

./: .gitignore  IMPLEMENTATION_PLAN.md  README.md  SKILL.md  pyproject.toml
src/maxcli/: __init__.py  cli.py
