[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "max-cli"
version = "0.1.0"
description = "Unofficial CLI for personal MAX Messenger accounts"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-only"
authors = [
  { name = "Danil Pismenny" }
]
dependencies = [
  "maxapi-python==1.2.5",
  "maxlib==0.1b1"
]

[project.scripts]
maxcli = "maxcli.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
